shimlang/test_scripts/errors/list_pop_oob.shm
let l = [1, 2, 3];
l.pop(10);
