shimlang/test_scripts/errors/list_pop_oob.stderr
 1 | let l = [1, 2, 3];
 2 | l.pop(10);
      ^^^^^^^^
Error: Index 10 is out of bounds
